Fix img stretching

--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -14,8 +14,13 @@ ul {
 }
 li {
   display: flex;
+  gap: 1rem;
 }
 
 img {
   width: 500px;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
